// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emphasis.md with options: {"type":{"text":false}}: emphasis.md 1`] = `
_abc123_

_强调a强调1_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_abc123_

_强调a强调1_

`;

exports[`emphasis.md with options: undefined: emphasis.md 1`] = `
_abc123_

_强调a强调1_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_abc123_

_强调 a 强调 1_

`;
